--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,24 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="shadow-box animated fadeIn m-2 p-2" style="min-width: 18rem; max-width: 30rem;">
 
   <div class="jumbotron">
     <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
-    <p class="lead">Desde aquí puede sacar un turno y esperar donde usted quiera evitando salas de espera!</p>
-    <hr class="my-4">
-    <p> Tenga en cuenta que si usted no se encuentra lo suficientemente cerca de la recepción al momento
-      de ser llamado, tendrá disponible un botón 'En camino' con el cual obtendrá tiempo extra 
-      para asistir a la ventanilla, y un canal de chat con su asistente que podrá acceder desde un 
-      icono de chat en la barra superior.
-    </p>
+    <p class="lead mb-5">Desde aquí puede sacar un turno y esperar donde usted quiera evitando salas de espera.</p>
 
-    <a class="btn btn-primary btn-lg" routerLink="/public" role="button">TURNOS</a>
+
   </div>
+  <button class="btn btn-primary m-1" routerLink="/public" role="button">SACAR UN TURNO</button>
+  <button class="btn btn-dark m-1" routerLink="/register" role="button">REGISTRARME</button>
+
+  <div class="container mt-5">
+    <div class="row" style="align-items: center;">
+      <div class="col-6 footer-text">
+        2020 | Matias Frith
+      </div>
+      <div class="col-6 footer-logo">
+        <img src="../../../assets/img/mean-mini.png" class="img-fluid">
+      </div>
+    </div>
+  </div>
+
 
 </div>
