--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,8 +1,26 @@
 .example-spacer {
-/* Tres valores: flex-grow | flex-shrink | flex-basis */
+  /* Tres valores: flex-grow | flex-shrink | flex-basis */
   flex: 1 1 auto;
 }
 
 .tickets-toolbar {
   font-size: medium;
+}
+
+.saturno-title {
+  font-size: 1.3em;
+  font-family: sans-serif;
+  font-weight: lighter;
+  letter-spacing: .3em;
+  line-height: normal;
+}
+
+.saturno-description {
+  font-size: .7em;
+  font-weight: lighter;
+  line-height: normal;
+}
+
+.saturno-logo {
+  width: 7em;
 }
