--- a/src/app/pages/help/help.component.html
+++ b/src/app/pages/help/help.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="shadow-box animated fadeIn m-2 p-2" style="min-width: 18rem; max-width: 30rem;">
 
     <form #f="ngForm" (ngSubmit)="enviar( f )">
 
