--- a/src/app/pages/public/screen/screen.component.html
+++ b/src/app/pages/public/screen/screen.component.html
@@ -10,7 +10,7 @@
         <!-- TICKET FINALIZADO -->
         <!-- ======================================================== -->
         <!-- *ngIf="!ticketsService.myTicket && ticketsService.myTicketEnd!==null" -->
-        <div *ngIf="ticketsService.myTicketEnd!==null" class="card text-white bg-danger mb-4">
+        <div *ngIf="ticketsService.myTicket===null" class="card text-white bg-danger mb-4">
             <div class="card-header banner-title">SU OPINION</div>
             <div class="banner-content p-3" style="background-color: rgb(141, 51, 51)">
 
@@ -60,7 +60,7 @@
         <!-- SU TURNO -->
         <!-- ======================================================== -->
 
-        <div class="card text-white bg-success mb-4" *ngIf="ticketsService.myTicket && ticketsService.myTicketEnd===null">
+        <div class="card text-white bg-success mb-4" *ngIf="ticketsService.myTicket">
             <div class="card-header banner-title">SU TURNO</div>
             <div class="banner-content" style="background-color: rgb(51, 141, 51)">
 
@@ -105,7 +105,7 @@
         <!-- ULTIMO TURNO -->
         <!-- ======================================================== -->
 
-        <div class="card text-white bg-danger mb-4">
+        <!-- <div class="card text-white bg-danger mb-4">
             <div class="card-header banner-title">ULTIMO TURNO</div>
             <div class="banner-content" style="background-color: rgb(141, 51, 51)">
 
@@ -123,7 +123,7 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
 
         <!-- ======================================================== -->
         <!-- PUBLICIDAD -->
