--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="shadow-box animated fadeIn m-2 p-2" style="min-width: 18rem; max-width: 30rem;">
 
     <div *ngIf="!companySelected" class="jumbotron">
         <h1 class="display-4">Ingrese la empresa</h1>
