--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -48,11 +48,11 @@
             <div class="row text-center p-0 w-100">
                 <div class="col">
                     <!-- Normal Login -->
-                    <button class="btn btn-success btn-block btn-lg p-2" type="submit">ENTRAR</button>
+                    <button class="btn btn-success btn-block text-uppercase" type="submit">ENTRAR</button>
                 </div>
                 <div class="col">
                     <!-- Google Login -->
-                    <button class="btn btn-danger btn-block btn-lg p-2" type="button" id="btnGoogle"
+                    <button class="btn btn-danger btn-block text-uppercase" type="button" id="btnGoogle"
                         data-toggle="tooltip">Google
                     </button>
                 </div>
