--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -29,7 +29,7 @@
           </div>
           <div class="row">
             <div class="col xxxxl">
-              {{ ticketsService.myTicket.id_skill.cd_skill }}
+              {{ ticketsService.myTicket.id_skill?.cd_skill }}
               {{ ticketsService.myTicket.cd_number }}
             </div>
           </div>
@@ -129,7 +129,7 @@
 <!-- ACTIONS -->
 <!------------------------------>
 
-<div class="container fixed-bottom shadow-box no-radius text-center py-1">
+<div class="container bg-light fixed-bottom shadow-box no-radius text-center py-1">
   <div class="row">
 
     <div class="col-4 col-sm-2 button-content">
@@ -152,7 +152,6 @@
           Asignar
         </div>
       </button>
-
     </div>
 
     <div class="col-4 col-sm-2 button-content">
@@ -197,7 +196,6 @@
     </div>
 
     <div class="col-4 col-sm-2 button-content">
-
       <button class="btn btn-danger button" (click)="releaseDesktop()" [disabled]="waitForClient"
         [ngClass]="{'button-disabled': waitForClient}">
         <div>
@@ -210,5 +208,4 @@
     </div>
 
   </div>
-
 </div>
